delete(論理削除)の実装
